# neural-recording-controller

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
neural-recording-controller/: CMakeLists.txt
neural-recording-controller/intan/: CMakeLists.txt  evalBoard.cpp  evalBoard.h
neural-recording-controller/intan/okFrontPanel/: okFrontPanel.h  okFrontPanelDLL.h  readme.md
tests/: CMakeLists.txt  test_main.cpp
